# s3bak

./: .gitignore  LICENSE  README.md  config.example.py  pyproject.toml  pyrightconfig.json
scripts/: aws-config.dev  compose-up.sh  compose.dev.yaml  compose.sh  minio-env.sh  s3bak.config.dev.py
src/s3bak/: __init__.py  cli.py
tests/: conftest.py  test_cli_errors.py  test_concurrency_config.py  test_entries.py  test_etag_compare.py  test_manifest.py  test_mode_types.py  test_options.py  test_push_pull.py  test_status_diff.py
